# sequoia_ros

./: .gitignore  .travis.yml  README.md
dbw_gem_msgs/: CMakeLists.txt  package.xml
dbw_gem_msgs/msg/: BrakeCmd.msg  BrakeReport.msg  SteeringCmd.msg  SteeringReport.msg  ThrottleReport.msg
dead_reckoning/: CMakeLists.txt  package.xml
dead_reckoning/launch/: dead_reckoning.launch
dead_reckoning/src/: DeadReckoning.cpp  DeadReckoning.h
ekf_example/: CMakeLists.txt  package.xml
ekf_example/cfg/: EkfExample.cfg
ekf_example/launch/: ekf_example.launch
ekf_example/rviz/: rviz_config.rviz
ekf_example/src/: EkfExample.cpp  EkfExample.h  ekf_example.cpp
lidar_stop_trigger/: CMakeLists.txt  package.xml
lidar_stop_trigger/cfg/: LidarStopTrigger.cfg
lidar_stop_trigger/src/: LidarStopTrigger.cpp  LidarStopTrigger.h  lidar_stop_trigger.cpp
move_vehicle/: CMakeLists.txt  package.xml
move_vehicle/src/: gps_conv.h  move_vehicle.cpp
self_drive_tasks_gazebo/: CMakeLists.txt  package.xml
self_drive_tasks_gazebo/launch/: f10_gazebo.launch  f11_gazebo.launch  f12_gazebo.launch  f1_gazebo.launch  f2_gazebo.launch  f3_gazebo.launch  f4_gazebo.launch  f5_gazebo.launch  f6_gazebo.launch  f7_gazebo.launch  f9_gazebo.launch  load_task_world.launch  q2_gazebo.launch  q3_gazebo.launch  q4_gazebo.launch  q5_gazebo.launch
self_drive_tasks_gazebo/worlds/: self_drive_course.world  self_drive_tasks.world
sequoia_description/: CMakeLists.txt  package.xml
sequoia_description/meshes/: wheel.dae
sequoia_description/urdf/: sequoia.urdf.xacro  sequoia_gazebo.urdf.xacro  sequoia_sensors.urdf.xacro
sequoia_description/urdf/sensors/: camera.urdf.xacro  gps.urdf.xacro  hokuyo_utm_30.urdf.xacro
sequoia_gazebo/: CMakeLists.txt  package.xml
sequoia_gazebo/cfg/: CameraControlPlugin.cfg
sequoia_gazebo/include/sequoia_gazebo/: CameraControlPlugin.h  SequoiaInterfacePlugin.h
sequoia_gazebo/launch/: spawn_sequoia.launch
sequoia_gazebo/src/: CameraControlPlugin.cpp  SequoiaInterfacePlugin.cpp
sequoia_gazebo/tests/: CMakeLists.txt
sequoia_lane_detection/: CMakeLists.txt  package.xml
sequoia_lane_detection/cfg/: LaneDetection.cfg  ValThresh.cfg
sequoia_lane_detection/launch/: camera_driver.launch  live_urdf.launch  test_projection.launch
sequoia_lane_detection/src/: LaneDetection.cpp  LaneDetection.h  lane_detection_node.cpp  pub_camera_info.py
sequoia_lane_detection/yaml/: lane_camera.yaml
sequoia_nav_filter/: CMakeLists.txt  package.xml
sequoia_nav_filter/cfg/: Ekf.cfg
sequoia_nav_filter/launch/: offline_kf_test.launch  test_kf.launch
sequoia_nav_filter/rviz/: rviz_config.rviz
sequoia_nav_filter/src/: SequoiaNavFilter.cpp  SequoiaNavFilter.h  nav_filter_node.cpp
sequoia_nav_laser/: CMakeLists.txt  package.xml
sequoia_nav_laser/launch/: sequoia_nav_laser.launch  sequoia_nav_laser_r3.launch  sequoia_nav_sim.launch  sequoia_nav_sim_q3.launch  spawn_sequoia.launch
sequoia_nav_laser/rviz/: rviz_config.rviz  rviz_config_real.rviz
sequoia_nav_laser/world/: gemworld.world
sequoia_nav_laser/yaml/: TrueHeading.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  global_costmap_params_dashed_line.yaml  global_costmap_params_real.yaml  global_costmap_params_solid_line.yaml  laser_filter_params.yaml  local_costmap_params.yaml  local_costmap_params_dashed_line.yaml  local_costmap_params_real.yaml  local_costmap_params_solid_line.yaml  local_planner_params.yaml  local_planner_params_kafrouny.yaml  move_base_params.yaml
sequoia_twist_controller/: CMakeLists.txt  package.xml
sequoia_twist_controller/cfg/: SequoiaTwist.cfg
sequoia_twist_controller/launch/: sequoia_twist_controller.launch
sequoia_twist_controller/src/: DiscreteTf.h  SequoiaTwistController.cpp  SequoiaTwistController.h  drive_control_msg_conversion.cpp  sequoia_twist_control_node.cpp
sign_detection/: CMakeLists.txt  package.xml
sign_detection/cascades/: no_trun_left_symbol_v2.xml  no_turn_left.xml  no_turn_right.xml  no_turns.xml  ow_left_arrow.xml  ow_right_arrow.xml  road_closed_v2.xml  road_closed_v3.xml
sign_detection/launch/: sign_detection.launch  sign_detection_depth.launch
sign_detection/scripts/: sign_detection.py  sign_detector.py  sign_detector_depth.py
stop_sign_node/: CMakeLists.txt  package.xml
stop_sign_node/src/: stop_sign_plan.cpp
task_nodes/: CMakeLists.txt  package.xml
task_nodes/launch/: drive_by_wire.launch  task_f11_sim.launch  task_f1_live.launch  task_q2_live.launch  task_q2_sim.launch  task_q3_live.launch  task_q3_sim.launch  task_q4_live.launch  task_q4_sim.launch  task_q5_live.launch  task_q5_sim.launch
task_nodes/launch/startup/: drive_by_wire.launch  live_lane_navigation.launch  live_lidar.launch  live_localization.launch  live_vision.launch  sim_lidar.launch  sim_navigation.launch
task_nodes/src/: lane_keep_and_stop.cpp  lane_keep_and_stop1.cpp  multiplexor.cpp  stop_line_test.cpp  task_q2.cpp  task_q5.cpp  turn_and_stop.cpp
turn_sign_node/: CMakeLists.txt  package.xml
turn_sign_node/src/: .turn_sign_plan.cpp.kate-swp  turn_sign_plan.cpp
ugv_course_gazebo/: CMakeLists.txt
ugv_course_gazebo/launch/: gazebo_world.launch  gazebo_world_real.launch
ugv_course_gazebo/models/arena_30m/: model.config  model.sdf
ugv_course_gazebo/worlds/: homework3.world  road_world.world  test_track.world
