<?xml version="1.0"?>
<package format="2">
  <name>dbw_gem_msgs</name>
  <version>0.1.3</version>
  <description>
    Drive-by-wire messages for the Polaris GEM
  </description>

  <license>Proprietary</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_gem_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_gem_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
