<?xml version="1.0"?>
<package format="2">
  <name>ekf_example</name>
  <version>0.0.0</version>
  <description>The ekf_example package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ugv_course_libs</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>
</package>
