<?xml version="1.0"?>
<package format="2">
  <name>lidar_stop_trigger</name>
  <version>0.0.0</version>
  <description>The lidar_stop_trigger package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
</package>
