<?xml version="1.0"?>
<package format="2">
  <name>move_vehicle</name>
  <version>0.0.0</version>
  <description>The Stop Sign node package</description>
  <maintainer email="ofbataineh@oakland.edu">Omar Bataineh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
</package>
