<?xml version="1.0"?>
<package format="2">
  <name>self_drive_tasks_gazebo</name>
  <version>0.0.0</version>
  <description>
    Gazebo models, worlds, and launch files to simulate the particular tasks in IGVC Self-Drive
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sequoia_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
