<?xml version="1.0"?>
<package format="2">
  <name>sequoia_description</name>
  <version>0.0.0</version>
  <description>
    Meshes and URDF descriptions for Sequoia
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
</package>