<?xml version="1.0"?>
<package format="2">
  <name>sequoia_gazebo</name>
  <version>0.0.0</version>
  <description>
    Gazebo plugin and launch files for simulating Sequoia in Gazebo
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
