<?xml version="1.0"?>
<package format="2">
  <name>sequoia_nav_filter</name>
  <version>0.0.0</version>
  <description>
    Extended Kalman filter algorithm to fuse precise
    differential RTK measurements with vehicle CAN bus data.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_filters</depend>

  <exec_depend>rviz</exec_depend>
</package>
