<?xml version="1.0"?>
<package>
  <name>sequoia_nav_laser</name>
  <version>0.0.0</version>
  <description>sequoia_nav_laser</description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
