<?xml version="1.0"?>
<package format="2">
  <name>sequoia_twist_controller</name>
  <version>0.0.0</version>
  <description>
    Kinematic control of Sequoia in Gazebo and real life.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>

</package>
