<?xml version="1.0"?>
<package format="2">
  <name>stop_sign_node</name>
  <version>0.0.0</version>
  <description>The Stop Sign node package</description>
  <maintainer email="ofbataineh@oakland.edu">Omar Bataineh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sign_detection</depend>
</package>
