<?xml version="1.0"?>
<package format="2">
  <name>task_nodes</name>
  <version>0.0.0</version>
  <description>The task_nodes package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>

  <exec_depend>move_base</exec_depend>
</package>
